Bugfix Working script for multiGPU training of textual inversion

--- a/stable-diffusion-webui-training-testing.ipynb
+++ b/stable-diffusion-webui-training-testing.ipynb
@@ -51,8 +51,8 @@
       },
       "outputs": [],
       "source": [
-        "!tar cf /kaggle/tmp/stable-diffusion-webui/textual_inversion | bzip2 -9 > /kaggle/working/textual_inversion.tar.bz2\n",
-        "!tar cf /kaggle/tmp/stable-diffusion-webui/hypernetwork | bzip2 -9 > /kaggle/working/hypernetwork.tar.bz2\n"
+        "!tar cf - /kaggle/tmp/stable-diffusion-webui/textual_inversion | bzip2 -9 > /kaggle/working/textual_inversion.tar.bz2\n",
+        "!tar cf - /kaggle/tmp/stable-diffusion-webui/hypernetwork | bzip2 -9 > /kaggle/working/hypernetwork.tar.bz2\n"
       ]
     }
   ]
